[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/freeweapons/spr_wep_ninjablue_0.png" type="Texture" id=1]
[ext_resource path="res://weapons/sword13.gd" type="Script" id=2]
[ext_resource path="res://weapons/swordaea.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.649, 7.973 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.2032, 59.683 )

[node name="sword3" type="Sprite" groups=[
"melee",
]]
modulate = Color( 0.266667, 0, 1, 1 )
position = Vector2( 0.228937, 12.9771 )
rotation = 1.5708
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=[
"damagebox",
]]
visible = false
position = Vector2( -16.25, -1.62493 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 19.9081, 1.65771 )
shape = SubResource( 1 )
disabled = true

[node name="Area2D2" type="Area2D" parent="."]
visible = false
collision_layer = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
scale = Vector2( 20, 20 )
shape = SubResource( 2 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
